deployment/environments/production/services/api-cli-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-cli-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-cli
  template:
    metadata:
      labels:
        app: api-cli
    spec:
      containers:
        - image: gcr.io/bedrock-foundation/bedrock-core-services-api-cli
          imagePullPolicy: Always
          name: api-cli
          # resources:
          #   limits:
          #     cpu: "1000m"
          #     memory: "4Gi"
          volumeMounts:
            - name: jobs-cache
              mountPath: /workdir/data
      volumes:
        - name: jobs-cache
          emptyDir: {}
