deployment/environments/production/services/api-jobs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-jobs-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-jobs
  template:
    metadata:
      labels:
        app: api-jobs
    spec:
      containers:
        - image: gcr.io/bedrock-foundation-production/bedrock-core-services-api-jobs
          imagePullPolicy: Always
          name: main
