deployment/environments/production/services/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: gcr.io/peachtree/peachtree-services-web
          imagePullPolicy: Always
          name: main
          # resources:
          #   limits:
          #     cpu: "1000m"
          #     memory: "4Gi"
          ports:
            - name: http-server
              containerPort: 2200
