deployment/environments/production/services/api-docs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-docs
  labels:
    name: api-docs
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 2400
      protocol: TCP
  selector:
    app: api-docs
  loadBalancerIP: 0.0.0.0
