deployment/environments/production/services/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    name: api
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 80
      targetPort: 2300
      protocol: TCP
