deployment/environments/production/services/single-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: single-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: single-ingress
spec:
  defaultBackend:
    service:
      name: api
      port:
        number: 80
  rules:
    - host: api.bedrock.foundation
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  number: 80
    - host: bedrock.foundation
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 80
          # - path: /1/search-with-long-timeout-example
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: api-long-timeout
          #       port:
          #         number: 80
# ---
# apiVersion: cloud.google.com/v1
# kind: BackendConfig
# metadata:
#   name: long-timeout-backendconfig
# spec:
#   timeoutSec: 3600

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: bedrock-api-long-timeout
#   labels:
#     name: bedrock-api-long-timeout
#   annotations:
#     cloud.google.com/backend-config: '{"ports": {"80":"long-timeout-backendconfig"}}'
# spec:
#   type: NodePort
#   selector:
#     app: bedrock-api
#   ports:
#     - port: 80
#       targetPort: 2300
#       protocol: TCP
